<resources>
    <string name="app_name">Converter Suhu</string>
    <string name="button">Button Here</string>
    <string name="exit">EXIT</string>
    <string name="converter_suhu">Converter Suhu</string>
    <string name="kelvin">Kelvin</string>
    <string name="hasil_dalam_kelvin">Hasil dalam Kelvin</string>
    <string name="masukkan_celcius">Masukkan Celcius</string>
    <string name="hasil_dalam_farenheit">Hasil dalam Farenheit</string>
    <string name="farenheit">Farenheit</string>
    <string name="reamur">Reamur</string>
    <string name="hasil_dalam_reamur">Hasil dalam Reamur</string>
    <string name="convert">CONVERT</string>
    <string name="celcius">Celcius</string>

</resources>
